--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        font-family: 'ChalkFont', sans-serif;
+      }
+
+      @font-face {
+        font-family: 'ChalkFont';
+        src: url('/assets/Pencilant Script.ttf') format('truetype');
       }
     </style>
   </head>
